rcs-wholesale/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rcs-wholesale
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rcs-wholesale
  template:
    metadata:
      labels:
        app: rcs-wholesale
    spec:
      containers:
        - name: rcs-wholesale
          image: 615993872885.dkr.ecr.ap-northeast-2.amazonaws.com/rcs-wholesale:9af1571dbfc96bf790ba1ae7e9be9f39c0152811
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 1Gi
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 15
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 3
