rcs-wholesale/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rcs-wholesale-svc
  namespace: default
spec:
  selector:
    app: rcs-wholesale
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
